Update BOT_API_URL to point to deployed Render backend

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             const userInput = document.getElementById('user-input');
             const sendButton = document.getElementById('send-button');
 
-            const BOT_API_URL = 'http://127.0.0.1:5000/chat'; // URL de tu API Flask
+            const BOT_API_URL = 'https://zenbot-bienestar-mindfulness.onrender.com/chat'; // URL de tu API Flask
 
             function addMessage(text, sender) {
                 const messageDiv = document.createElement('div');
